k8s/overlays/production/patches/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ergo-site
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: ergo-site
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
