k8s/overlays/production/patches/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ergo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: ergo-maffo.tdksoftconsulting.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ergo-service
                port:
                  number: 80
  tls:
    - hosts:
        - ergo-maffo.tdksoftconsulting.de
      secretName: ergo-tls-cert-prod
